--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
           <a id="html-checker" href="#">Check HTML</a> ~ 
           <a id="css-checker" href="#">Check CSS</a></small>
      </p>
-     
+  </footer>
+ </main>
+  <script src="js/main.js"></script>
  </body>
 </html>
