--- a/index.html
+++ b/index.html
@@ -1,33 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
  <head>
-     <title>Title goes here</title>
+     <title>Form Template</title>
   <meta charset="utf-8" />
   <meta name="robots" content="noindex,nofollow" />
   <meta name="viewport" content="width=device-width" />
   <link rel="stylesheet" href="css/main.css" />
   <link rel="stylesheet" href="css/nav.css" />
-  <script src="js/main.js"></script>
-
+  <link rel="javascript" href="js/main.js" />
  </head>
  <body>
      <header>
-     <h1>Title goes here</h1>
+     <h1>Form Template</h1>
         <nav class="topnav" id="myTopnav">
             <a href="index.html" class="active">Home</a>
-            <a href="https://azzyman99.github.io/stylin-with-css" target="_blank"> name of project goes here</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+            <a href="https://azzyman99.github.io/Web-Page-Group-5/" target="_blank">link here</a>
         </nav>
      </header>
-     
-       <h2 class="subheader">title goes here </h2>
-       <p> content goes here </p>
-     
-      <p><small>&copy; 2021 by 
-          Ozzy Vasquez, All Rights Reserved ~ 
+   <main class="wrapper">
+        <form method="get" action="" >
+          <div>
+            <lable for="FirstName">First Name</lable>: <br />
+            <input type ="text" name ="FirstName" id="FirstName" placeholder="First Name" required="required" autofocus />
+          </div>
+          <div>
+            <lable for="LastName">Last Name</lable>: <br />
+            <input type ="text" name ="LastName" id="LastName" placeholder="Last Name" required="required" />
+          </div>
+          <div>
+            <lable for="Email">Email</lable>: <br />
+            <input type ="email" name ="Email" id="Email" placeholder="Email" required="required" />
+          </div>
+          <div>
+            <lable for="Address">Address</lable>: <br />
+            <input type ="text" name ="Address" id="Address" placeholder="Address" required="required" />
+          </div>
+          <div>
+              <lable for="State">State</lable>: <br />
+              <select name="State" id="State" required="required">
+                <option value="">Please select a state</option>
+                <option value="AK">Alaska</option>
+                <option value="CA">California</option>
+                <option value="OR">Oregon</option>
+                <option value="WA">Washington</option>
+            </select>
+          </div>
+          <div>
+            <fieldset>
+              <legend>Would you like to join our mailing list?</legend>
+             <lable><input type="radio" name="JoinMailingList" value="Yes" /> Yes</lable><br />
+             <lable><input type="radio" name="JoinMailingList" value="No" /> No</lable>
+            </fieldset>
+          </div>
+          <div>
+            <input type="submit" />
+          </div>
+        </form>
+     <footer>
+      <p><small>&copy; 2021-2022 by 
+          osvaldo VAsquez, All Rights Reserved ~ 
           <a id="html-checker" href="#">Check HTML</a> ~ 
           <a id="css-checker" href="#">Check CSS</a></small>
      </p>
+    </footer>
+  </main>
   <script src="js/main.js"></script>
  </body>
 </html>
