--- a/index.html
+++ b/index.html
@@ -54,6 +54,15 @@
             </fieldset>
           </div>
           <div>
+            <fieldset>
+              <legend>Intrested in?</legend>
+             <lable><input type="checkbox" name="IntrestedIn" value="Website" /> Website</lable><br />
+             <lable><input type="checkbox" name="IntrestedIn" value="OnlineCalender" /> OnlineCalender</lable><br />
+             <lable><input type="checkbox" name="IntrestedIn" value="ContactForm" /> Contact Form</lable><br />
+             <lable><input type="checkbox" name="IntrestedIn" value="Lollipops" /> Complimentary Lillipops</lable>
+            </fieldset>
+          </div>
+          <div>
             <input type="submit" />
           </div>
         </form>
