--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <div>
             <fieldset>
               <legend>Would you like to join our mailing list?</legend>
-             <lable><input type="radio" name="JoinMailingList" value="Yes" /> Yes</lable><br />
+             <lable><input type="radio" name="JoinMailingList" value="Yes" required="required"/> Yes</lable><br />
              <lable><input type="radio" name="JoinMailingList" value="No" /> No</lable>
             </fieldset>
           </div>
@@ -63,7 +63,11 @@
             </fieldset>
           </div>
           <div>
-            <input type="submit" />
+            <lable for="Comments">Comments</lable>: <br />
+              <textarea name="Comments" cols="36" row="4" id="Comments"> </textarea>
+          </div>
+          <div>
+            <input type="submit" value="Submit It!" />
           </div>
         </form>
      <footer>
