--- a/index.html
+++ b/index.html
@@ -7,72 +7,76 @@
   <meta name="viewport" content="width=device-width" />
   <link rel="stylesheet" href="css/main.css" />
   <link rel="stylesheet" href="css/nav.css" />
-  <link rel="javascript" href="js/main.js" />
+  <link rel="stylesheet" href="css/forms.css" />
  </head>
  <body>
      <header>
      <h1>Form Template</h1>
         <nav class="topnav" id="myTopnav">
             <a href="index.html" class="active">Home</a>
+            <a href="#" target="_blank">Name of project goes here</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
-            <a href="https://azzyman99.github.io/Web-Page-Group-5/" target="_blank">link here</a>
         </nav>
      </header>
+     
    <main class="wrapper">
-        <form method="get" action="" >
-          <div>
-            <lable for="FirstName">First Name</lable>: <br />
-            <input type ="text" name ="FirstName" id="FirstName" placeholder="First Name" required="required" autofocus />
-          </div>
-          <div>
-            <lable for="LastName">Last Name</lable>: <br />
-            <input type ="text" name ="LastName" id="LastName" placeholder="Last Name" required="required" />
-          </div>
-          <div>
-            <lable for="Email">Email</lable>: <br />
-            <input type ="email" name ="Email" id="Email" placeholder="Email" required="required" />
-          </div>
-          <div>
-            <lable for="Address">Address</lable>: <br />
-            <input type ="text" name ="Address" id="Address" placeholder="Address" required="required" />
-          </div>
-          <div>
-              <lable for="State">State</lable>: <br />
-              <select name="State" id="State" required="required">
-                <option value="">Please select a state</option>
+    <form method="get" action="" class="main-form">
+        <div>
+            <label for="FirstName">First Name</label>: <br />
+            <input type="text" name="FirstName" id="FirstName" placeholder="First Name" required="required" autofocus />
+        </div>
+        <div>
+            <label for="LastName">Last Name</label>: <br />
+            <input type="text" name="LastName" id="LastName" placeholder="Last Name" required="required" />
+        </div> 
+        <div>
+            <label for="Email">Email</label>: <br />
+            <input type="email" name="Email" id="Email" placeholder="Email" required="required" />
+        </div>
+        <div>
+            <label for="Address">Address</label>: <br />
+            <input type="text" name="Address" id="Address" placeholder="Address" required="required" />
+        </div>
+        <div>
+            <label for="State">State</label>: <br />
+            <select name="State" id="State" required="required">
+                <option value="">Please select state</option>
                 <option value="AK">Alaska</option>
                 <option value="CA">California</option>
                 <option value="OR">Oregon</option>
                 <option value="WA">Washington</option>
             </select>
-          </div>
-          <div>
+        </div>
+        <div>
             <fieldset>
-              <legend>Would you like to join our mailing list?</legend>
-             <lable><input type="radio" name="JoinMailingList" value="Yes" required="required"/> Yes</lable><br />
-             <lable><input type="radio" name="JoinMailingList" value="No" /> No</lable>
+                <legend>Would you like join our mailing list?</legend>
+                <label><input type="radio" name="JoinMailingList" value="Yes" required="required" /> Yes</label><br />
+                <label><input type="radio" name="JoinMailingList" value="No" /> No</label>
             </fieldset>
-          </div>
-          <div>
+        </div>
+
+        <div>
             <fieldset>
-              <legend>Intrested in?</legend>
-             <lable><input type="checkbox" name="IntrestedIn" value="Website" /> Website</lable><br />
-             <lable><input type="checkbox" name="IntrestedIn" value="OnlineCalender" /> OnlineCalender</lable><br />
-             <lable><input type="checkbox" name="IntrestedIn" value="ContactForm" /> Contact Form</lable><br />
-             <lable><input type="checkbox" name="IntrestedIn" value="Lollipops" /> Complimentary Lillipops</lable>
+                <legend>Interested In?</legend>
+                <label><input type="checkbox" name="InterestedIn" value="Website" /> Website</label><br />
+                <label><input type="checkbox" name="InterestedIn" value="OnlineCalendar" /> Online Calendar</label><br />
+                <label><input type="checkbox" name="InterestedIn" value="ContactForm" /> Contact Form</label><br />
+                <label><input type="checkbox" name="InterestedIn" value="Lollipops" /> Complimentary Lollipops</label>
             </fieldset>
-          </div>
+        </div>
+
+        <div>
+            <label for="Comments">Comments</label>: <br />
+            <textarea name="Comments" cols="36" rows="4" id="Comments"></textarea>
+        </div>
+        
           <div>
-            <lable for="Comments">Comments</lable>: <br />
-              <textarea name="Comments" cols="36" row="4" id="Comments"> </textarea>
-          </div>
-          <div>
-            <input type="submit" value="Submit It!" />
-          </div>
-        </form>
+            <input type="submit" value="Submit it!" />
+        </div>
+    </form>
      <footer>
       <p><small>&copy; 2021-2022 by 
-          osvaldo VAsquez, All Rights Reserved ~ 
+          Osvaldo Vasquez, All Rights Reserved ~ 
           <a id="html-checker" href="#">Check HTML</a> ~ 
           <a id="css-checker" href="#">Check CSS</a></small>
      </p>
