--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </div>
     </form>
      <footer>
-      <p><small>&copy; myYear-<span id= "copyright"></span> by
+      <p><small>&copy; 2021-<span id= "copyright"></span> by
           Osvaldo Vasquez, All Rights Reserved ~ 
           <a id="html-checker" href="#">Check HTML</a> ~ 
           <a id="css-checker" href="#">Check CSS</a></small>
